--- a/clap_gitversion_ws/crates/cli/Cargo.toml
+++ b/clap_gitversion_ws/crates/cli/Cargo.toml
@@ -1,17 +1,7 @@
 [package]
-name = "{{project-name}}"
+name = "cli"
 version = "0.1.0"
 edition = "2021"
-authors = ["{{authors}}"]
-description = "{{project-description}}"
-repository = "https://github.com/{{gh-username}}/{{project-name}}"
-license = "MIT OR Apache-2.0"
-
-[profile.release]
-strip = true      # Automatically strip symbols from the binary.
-opt-level = "z"   # Optimize for size.
-lto = true
-codegen-units = 1
 
 [dependencies]
 anyhow = { version = "1.0.86", default-features = false }
