--- a/clap_gitversion/Cargo.toml
+++ b/clap_gitversion/Cargo.toml
@@ -24,6 +24,8 @@ once_cell = { default-features = false, version = "1.19.0", features = ["std"] }
 serde = { version = "1.0.203", default-features = false, features = [
   "serde_derive",
 ] }
-serde_json = "1.0.120"
 simplelog = "0.12.2"
 time = { version = "0.3.36", default-features = false }
+
+[build-dependencies]
+gitversion_build = "0.1.1"
