--- a/clap_gitversion_ws/crates/cli/Cargo.toml
+++ b/clap_gitversion_ws/crates/cli/Cargo.toml
@@ -17,3 +17,6 @@ serde = { version = "1.0.203", default-features = false, features = [
 serde_json = "1.0.120"
 simplelog = "0.12.2"
 time = { version = "0.3.36", default-features = false }
+
+[build-dependencies]
+gitversion_build = "0.1.1"
