--- a/clap_gitversion/.github/workflows/audit.yml
+++ b/clap_gitversion/.github/workflows/audit.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Run security audit
         uses: rustsec/audit-check@v1.4.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
 {% endraw  %}
